--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.0",
     "axios": "^0.26.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "next": "^12.1.4",
@@ -37,6 +40,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "stylelint": "^14.6.1",
@@ -44,8 +49,6 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-order": "^5.0.0",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.6.3",
-    "husky": "^5.2.0",
-    "lint-staged": "^10.5.4"
+    "typescript": "4.6.3"
   }
 }
