--- a/src/package.json
+++ b/src/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest --watchAll",
     "lint": "next lint",
     "lint:fix": "eslint --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --write --ignore-path .gitignore '**/*.{js,jsx,ts,tsx,json,css}'",
@@ -17,14 +18,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.0",
+    "@types/jest": "^27.4.1",
     "axios": "^0.26.1",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "next": "^12.1.4",
     "react": "^18.0.0-beta-24dd07bd2-20211208",
     "react-dom": "^18.0.0-beta-24dd07bd2-20211208",
-    "react-query": "^3.34.19"
+    "react-query": "^3.34.19",
+    "ts-jest": "^27.1.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.0",
     "@types/eslint": "8.4.1",
     "@types/node": "17.0.23",
@@ -41,6 +45,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^5.2.0",
+    "jest": "^27.5.1",
     "lint-staged": "^10.5.4",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
